src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

li{
    @apply list-none;
}

h1, h2, h3, h4 {
    @apply font-syne;
}

h1 {
    @apply text-3xl;
}

h2 {
    @apply text-2xl;
}

h3 {
    @apply text-xl
}

h4 {
    @apply text-lg
}

p, a, li {
    @apply font-noto font-medium;
}

.content_area h1 {
    @apply font-bold mb-10 sm:mb-4 md:mb-7; 
}

.content_area h2 {
    @apply mb-1; 
}

.content_area h1,.content_area h2,.content_area h3,.content_area h4,.content_area h5 {
    @apply text-ctp-green;
}

.content_area a {
    @apply text-ctp-green underline underline-offset-4 hover:text-ctp-base hover:no-underline hover:bg-ctp-green px-[0.5ch] transition-colors duration-500 select-text rounded-sm;
}

.content_area p {
    @apply text-justify;
}

.writing_content h1 {
    @apply font-bold mb-10 sm:mb-4 md:mb-7 text-ctp-lavender;
}

.writing_content h2 {
    @apply font-semibold mb-1 text-ctp-teal;
}

.writing_content h3 {
    @apply font-medium mb-0.5 text-ctp-peach
}

.writing_content a {
    @apply text-ctp-green underline underline-offset-4 hover:text-ctp-base hover:no-underline hover:bg-ctp-green px-[0.5ch] transition-colors duration-500 select-text rounded-sm;
}

.writing_content em {
    @apply font-thin text-ctp-sapphire
}

.writing_content pre {
    @apply bg-ctp-crust p-5 border-[1px] border-ctp-text
}

.writing_content code {
    @apply whitespace-pre-wrap font-jetbrains
}

.writing_content img {
    @apply mx-auto;
}

.social_link{
    @apply w-6 aspect-square fill-ctp-text hover:opacity-50
}

.arrow{
    @apply w-3 sm:w-2 aspect-square fill-ctp-text;
}

* {
    @apply m-0 p-0 box-border selection:bg-ctp-surface2 selection:text-ctp-text transition-all duration-500 scroll-smooth;
}

a {
    @apply select-none
}

@layer base {
    /* Encode Sans Condensed */
	@font-face {
		font-family: 'Encode Sans Condensed';
        src: local('Encode Sans Condensed bold'), local('EncodeSansCondensed-Bold'), url('/fonts/Encode_Sans_Condensed/EncodeSansCondensed-Bold.ttf');
        font-weight: bold;
        font-display: swap;
	}
	@font-face {
		font-family: 'Encode Sans Condensed';
        src: local('Encode Sans Condensed Semibold'), local('EncodeSansCondensed-SemiBold'), url('/fonts/Encode_Sans_Condensed/EncodeSansCondensed-SemiBold.ttf');
        font-weight: semibold;
        font-display: swap;
	}

    /* Inter */
    @font-face {
        font-family: 'Inter';
        src: local('Inter Bold'), local('Inter-Bold'), url('/fonts/Inter/static/Inter-Medium.ttf');
        font-weight: medium;
        font-display: swap;
    }
    @font-face {
        font-family: 'Inter';
        src: local('Inter Regular'), local('Inter-Regular'), url('/fonts/Inter/static/Inter-Regular.ttf');
        font-weight: regular;
        font-display: swap;
    }
    @font-face {
        font-family: 'Inter';
        src: local('Inter Light'), local('Inter-Light'), url('/fonts/Inter/static/Inter-Light.ttf');
        font-weight: light;
        font-display: swap;
    }

    /* Noto Sans */
    @font-face {
        font-family: 'Noto Sans';
        src: local('Noto Sans Bold'), local('NotoSans-Bold'), url('/fonts/Noto_Sans/static/NotoSans-Bold.ttf');
        font-weight: bold;
        font-display: swap;
    }
    @font-face {
        font-family: 'Noto Sans';
        src: local('Noto Sans Black'), local('NotoSans-Black'), url('/fonts/Noto_Sans/static/NotoSans-Medium.ttf');
        font-weight: medium;
        font-display: swap;
    }
    @font-face {
        font-family: 'Noto Sans';
        src: local('Noto Sans Black'), local('NotoSans-Black'), url('/fonts/Noto_Sans/static/NotoSans-Regular.ttf');
        font-weight: regular;
        font-display: swap;
    }
    @font-face {
        font-family: 'Noto Sans';
        src: local('Noto Sans Black'), local('NotoSans-Black'), url('/fonts/Noto_Sans/static/NotoSans-Light.ttf');
        font-weight: light;
        font-display: swap;
    }

    /* Syne */
    @font-face {
        font-family: 'Syne';
        src: url('/fonts/Syne/Syne-VariableFont_wght.ttf');
        font-weight: 100 900; /* Range of font weights available in the variable font */
        font-stretch: 1% 100%; /* Range of font stretches available in the variable font */
        font-style: normal; /* or italic if the font supports it */
        font-display: swap;
    }

    /* JetBrains Mono */
    @font-face {
        font-family: 'JetBrains Mono';
        src: url('/fonts/JetBrains_Mono/JetBrainsMono-VariableFont_wght.ttf');
        font-weight: 100 900; /* Range of font weights available in the variable font */
        font-stretch: 1% 100%; /* Range of font stretches available in the variable font */
        font-style: normal; /* or italic if the font supports it */
        font-display: swap;
    }
}

code .hljs{
    color:#cdd6f4;
    background:#1e1e2e
}
code .hljs-keyword{
    color:#cba6f7
}
code .hljs-built_in{
    color:#f38ba8
}
code .hljs-type{
    color:#f9e2af
}
code .hljs-literal{
    color:#fab387
}
code .hljs-number{
    color:#fab387
}
code .hljs-operator{
    color:#94e2d5
}
code .hljs-punctuation{
    color:#bac2de
}
code .hljs-property{
    color:#94e2d5
}
code .hljs-regexp{
    color:#f5c2e7
}
code .hljs-string{
color:#a6e3a1
}
code .hljs-char.escape_{
    color:#a6e3a1
}
code .hljs-subst{
    color:#a6adc8
}
code .hljs-symbol{
    color:#f2cdcd
}
code .hljs-variable{
    color:#cba6f7
}
code .hljs-variable.language_{
    color:#cba6f7
}
code .hljs-variable.constant_{
    color:#fab387
}
code .hljs-title{
    color:#89b4fa
}
code .hljs-title.class_{
    color:#f9e2af
}
code .hljs-title.function_{
    color:#89b4fa
}
code .hljs-params{
    color:#cdd6f4
}
code .hljs-comment{
    color:#585b70
}
code .hljs-doctag{
    color:#f38ba8
}
code .hljs-meta{
    color:#fab387
}
code .hljs-section{
    color:#89b4fa
}
code .hljs-tag{
    color:#a6adc8
}
code .hljs-name{
    color:#cba6f7
}
code .hljs-attr{
    color:#89b4fa
}
code .hljs-attribute{
    color:#a6e3a1
}
code .hljs-bullet{
    color:#94e2d5
}
code .hljs-code{
    color:#a6e3a1
}
code .hljs-emphasis{
    color:#f38ba8;font-style:italic
}
code .hljs-strong{
    color:#f38ba8;font-weight:bold
}
code .hljs-formula{
    color:#94e2d5
}
code .hljs-link{
    color:#74c7ec;font-style:italic
}
code .hljs-quote{
    color:#a6e3a1;font-style:italic
}
code .hljs-selector-tag{
    color:#f9e2af
}
code .hljs-selector-id{
    color:#89b4fa
}
code .hljs-selector-class{
    color:#94e2d5
}
code .hljs-selector-attr{
    color:#cba6f7
}
code .hljs-selector-pseudo{
    color:#94e2d5
}
code .hljs-template-tag{
    color:#f2cdcd
}
code .hljs-template-variable{
    color:#f2cdcd
}
code .hljs-addition{
    color:#a6e3a1;background:rgba(166,227,161,.15)
}
code .hljs-deletion{
        color:#f38ba8;
        background:rgba(243,139,168,.15)
}

